@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2009-01-23  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> GraphicsMagick.spec.in: The module .la files need to be
+        installed as part of the base install or else the modules will
+        fail to load.
+
+</UL>
+<p>
 2009-01-22  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
