@@ -1,3 +1,9 @@
+2009-01-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* GraphicsMagick.spec.in: The module .la files need to be
+	installed as part of the base install or else the modules will
+	fail to load.
+
 2009-01-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/dib.c (ReadDIBImage): Fix assertion thrown for DIB files
